[package]
name = "common"
version = "0.1.0"
authors = ["liuchao56 <liuchao56@jd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-std = "1.6.2"
surf = "2.0.0-alpha.4"
bytes = "0.5"
clap = "2.33.3"