[package]
name = "tokio-tour"
version = "0.1.0"
authors = ["four <ai-l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
futures = "0.3.4"
mio = "0.6"
failure = "0.1.8"
mini-redis = "0.2"
bytes="0.5"